--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 h1 {
-    color: orangered;
+    color: red;
     font-size: 45px;
 }
 
@@ -13,9 +13,9 @@ h1 {
 #b8,
 #b9 {
     width: 80px;
-    height: 52px;
+    height: 80px;
     margin: auto;
-    border: 1px solid gray;
+    border: 1px solid black;
     border-radius: 6px;
     font-size: 30px;
     text-align: center;
@@ -25,11 +25,11 @@ h1 {
     box-sizing: border-box;
     width: 95px;
     height: 40px;
-    border: 1px solid dodgerblue;
+    border: 1px solid red;
     margin: auto;
     border-radius: 4px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: dodgerblue;
+    background-color: red;
     color: white;
     font-size: 20px;
     cursor: pointer;
@@ -40,7 +40,7 @@ h1 {
 
 #turns {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: dodgerblue;
+    color: red;
     font-size: 20px;
 }
 
@@ -56,6 +56,6 @@ h1 {
 
 #instruction {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: dodgerblue;
-    font-size: 17px;
+    color: black;
+    font-size: 18px;
 }
